# rtmp

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hch/bilibili/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/hch/bilibili/: AudioEncoder.java  CameraEncoder.java  CameraHelper.java  FileUtils.java  H264Encoder.java  ImageUtil.java  LocalSurfaceView.java  MainActivity.java  MediaProjectionEncoder.java  PackageSender.java  RTMPPackage.java  YUVUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/hch/bilibili/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
